work on better styles & truncate text to avoid massive cards

--- a/styles.css
+++ b/styles.css
@@ -57,19 +57,28 @@ body {
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 25px;
+  grid-gap: 15px;
 }
 
 .card {
-  width: 350px;
-  height: 650px;
-  background-color: #333;
+  width: 250px;
+  height: 550px;
+  background-color: #EDBFB7;
   color: #fff;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+
+  
 }
 
 .card img {
   width: 100%;
   height: 50%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
 }
 
 .card p {
@@ -78,15 +87,12 @@ body {
 }
 
 .badge-container span {
-  display: block;
+  display: block; 
+  padding-bottom: 1em;
 }
 
 .badge-container {
   font-size: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .badge {
